Auth service DI refactor
