# authservice/docs/swagger.json
@@ -42,7 +42,7 @@
                     "200": {
                         "description": "Password successfully changed",
                         "schema": {
-                            "$ref": "#/definitions/auth.UserInDTO"
+                            "$ref": "#/definitions/entity.UserInDTO"
                         }
                     },
                     "400": {
@@ -86,7 +86,7 @@
                     "200": {
                         "description": "Refresh token is valid",
                         "schema": {
-                            "$ref": "#/definitions/auth.UserInDTO"
+                            "$ref": "#/definitions/entity.UserInDTO"
                         }
                     },
                     "401": {
@@ -124,7 +124,7 @@
                     "200": {
                         "description": "Refresh token is valid",
                         "schema": {
-                            "$ref": "#/definitions/auth.UserInDTO"
+                            "$ref": "#/definitions/entity.UserInDTO"
                         }
                     },
                     "401": {
@@ -164,11 +164,11 @@
                 "parameters": [
                     {
                         "description": "Login request body",
-                        "name": "auth.UserInDTO",
+                        "name": "entity.UserInDTO",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/auth.UserInDTO"
+                            "$ref": "#/definitions/entity.UserInDTO"
                         }
                     }
                 ],
@@ -176,7 +176,7 @@
                     "200": {
                         "description": "Successfully logged in",
                         "schema": {
-                            "$ref": "#/definitions/auth.LoginOutDTO"
+                            "$ref": "#/definitions/entity.LoginOutDTO"
                         },
                         "headers": {
                             "Set-Cookie": {
@@ -234,7 +234,7 @@
                     "201": {
                         "description": "Admin successfully registered",
                         "schema": {
-                            "$ref": "#/definitions/auth.UserInDTO"
+                            "$ref": "#/definitions/entity.UserInDTO"
                         }
                     },
                     "400": {
@@ -298,7 +298,7 @@
                     "201": {
                         "description": "Successfully registered",
                         "schema": {
-                            "$ref": "#/definitions/auth.UserInDTO"
+                            "$ref": "#/definitions/entity.UserInDTO"
                         }
                     },
                     "400": {
@@ -324,7 +324,15 @@
         }
     },
     "definitions": {
-        "auth.LoginOutDTO": {
+        "entity.Error": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.LoginOutDTO": {
             "type": "object",
             "properties": {
                 "access": {
@@ -340,25 +348,6 @@
                     "type": "string"
                 },
                 "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "auth.UserInDTO": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "entity.Error": {
-            "type": "object",
-            "properties": {
-                "error": {
                     "type": "string"
                 }
             }
@@ -385,6 +374,17 @@
                 "username": {
                     "type": "string",
                     "minLength": 1
+                }
+            }
+        },
+        "entity.UserInDTO": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         }
