# authservice/internal/entity/dto.go
@@ -1,8 +1,8 @@
-package auth
+package entity
 
 type UserInDTO struct {
-	Username string `json:"username"`
-	Password string `json:"password"`
+	Username string `json:"username" validate:"required,min=1"`
+	Password string `json:"password" validate:"required,min=1"`
 }
 
 type LoginOutDTO struct {
